src/test/resources/tokens/invalid/double_out_of_bounds.unpick
unpick v3
group double
    1.7976931348623159E308